[package]
name = "chapter14"
version = "0.1.0"
authors = ["Mamadou S Diallo <msdiallo@quantifyafrica.org>"]
edition = "2018"
description = "A fun game where you guess what number the computer has chosen."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
